# distributed-load-balancer

./: CMakeLists.txt  LICENSE  README.md  client.c  master.c  slave.c
jobs/count-words/: countwords.c
lib/: jobqueue.h  slavelist.h  utilities.h
report/: final-project-report.docx
